# embedsmith

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml  realease.yml
embedsmith/: __init__.py  cli.py  core.py
embedsmith/config/: __init__.py  default_config.py
embedsmith/templates/: .gitignore.j2  __init__.py  config_h.j2  debug_config.j2  flash_tool.j2  linker_script.j2  main_basic_c.j2  main_c.j2  makefile.j2  readme.j2  test_main.j2
tests/: test_cli.py  test_embedsmith.py
